--- a/front/static/index.css
+++ b/front/static/index.css
@@ -71,7 +71,7 @@ body{
 
 #input {
     width: 100%;
-    height: 300px;
+    height: fit-content;
     max-width: 1300px;
     background-color: #dbecff;
     flex-flow: wrap;
