--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -6,7 +6,7 @@
 
     <body>
         <div class="header">
-            <h1 class="title">Project Title</h1>
+            <h1 class="title">Food Recommend</h1>
         </div>
 
             <div id="today">
